<resources>
    <string name="app_name">NAQM</string>
    <string name="date_wise_graphs">Date-wise Graphs</string>
    <string name="real_time_graphs">Real-time Graphs</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="ch4">CH4</string>
    <string name="co">CO</string>
    <string name="nh3">NH3</string>
    <string name="no2">NO2</string>
    <string name="so2">SO2</string>
    <string name="dust">dust</string>
    <string name="select_date">Select Date</string>
    <string name="ammonia_ppm">Ammonia/ppm</string>
    <string name="carbon_monoxide_ppm">Carbon Monoxide/ppm</string>
    <string name="nitrogen_dioxide_pmm">Nitrogen Dioxide/pmm</string>
    <string name="dust_pmm">Dust/pmm</string>
    <string name="methane_pmm">Methane/pmm</string>
    <string name="carbon_dioxide_pmm">Carbon Dioxide/pmm</string>
    <string name="co2">CO2</string>
    <string name="ok">Got it!</string>
    <string name="question_mark">"?"</string>
    <string name="_00">00</string>
    <string name="default_date">Last Update: 01/01/1970</string>
    <string name="subtitle">NUST Air Quality Monitoring System</string>
    <string name="humidity">Humidity/%</string>
    <string name="temperature_c">Temperature/°C</string>
</resources>