<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".RealtimeGraphsActivity"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chartLayout">
            <com.anychart.AnyChartView
                android:id="@+id/chartView1"
                android:layout_width="match_parent"
                android:paddingEnd="10sp"
                android:layout_height="500sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:itemBackground="@color/black"
                android:background="@color/white"
                android:layout_marginTop="?attr/actionBarSize"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/button_holder"
            android:layout_width="match_parent"
            android:layout_below="@+id/chartLayout"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonNH3"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:background="@drawable/button_nh3"
                android:text="@string/nh3"
                android:layout_marginTop="20sp"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/buttonCO"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:background="@drawable/button_co"
                android:text="@string/co"
                android:layout_marginTop="20sp"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/buttonNO2"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:background="@drawable/button_no2"
                android:text="@string/no2"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/buttonSO2"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:background="@drawable/button_so2"
                android:text="@string/so2"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:layout_marginStart="20sp"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/buttonCH4"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:layout_marginBottom="20sp"
                android:background="@drawable/button_ch4"
                android:text="@string/ch4"
                android:layout_marginTop="20sp"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/buttonDUST"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:background="@drawable/button_dust"
                android:text="@string/dust"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:textAlignment="center"/>
        </RelativeLayout>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>



