<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomepageActivity">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="200sp"
                android:id="@+id/one_two"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="horizontal">
                <RelativeLayout android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/ammonia"
                    android:background="@drawable/red_rect"
                    android:layout_weight="1" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="20sp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/ammonia_ppm"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/ammonia_reading"
                        android:layout_centerInParent="true"
                        android:textColor="@color/black"
                        android:text="9999"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeMaxTextSize="100sp"
                        android:textAlignment="center"
                        android:paddingEnd="10sp"
                        android:paddingStart="10sp"
                        app:autoSizeStepGranularity="2sp"
                        android:layout_height="100sp"/>
                </RelativeLayout>

                <RelativeLayout android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/carbon_monoxide"
                    android:background="@drawable/yellow_rect"
                    android:layout_weight="1" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="20sp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/carbon_monoxide_ppm"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/carbon_monoxide_reading"
                        android:layout_centerInParent="true"
                        android:textColor="@color/black"
                        android:text="9999"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeMaxTextSize="100sp"
                        android:textAlignment="center"
                        android:paddingEnd="10sp"
                        android:paddingStart="10sp"
                        app:autoSizeStepGranularity="2sp"
                        android:layout_height="100sp"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="200sp"
                android:id="@+id/three_four"
                android:layout_below="@+id/one_two"
                android:orientation="horizontal">
                <RelativeLayout android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/nitrogen_dioxide"
                    android:background="@drawable/green_rect"
                    android:layout_weight="1" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="20sp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/nitrogen_dioxide_pmm"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/nitrogen_dioxide_reading"
                        android:layout_centerInParent="true"
                        android:textColor="@color/black"
                        android:text="9999"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeMaxTextSize="100sp"
                        android:textAlignment="center"
                        android:paddingEnd="10sp"
                        android:paddingStart="10sp"
                        app:autoSizeStepGranularity="2sp"
                        android:layout_height="100sp"/>
                </RelativeLayout>

                <RelativeLayout android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/sulphur_dioxide"
                    android:layout_weight="1" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="20sp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/carbon_dioxide_pmm"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/sulphur_dioxide_reading"
                        android:layout_centerInParent="true"
                        android:textColor="@color/black"
                        android:text="9999"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeMaxTextSize="100sp"
                        android:textAlignment="center"
                        android:paddingEnd="10sp"
                        android:paddingStart="10sp"
                        app:autoSizeStepGranularity="2sp"
                        android:layout_height="100sp"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="200sp"
                android:id="@+id/five_six"
                android:layout_below="@+id/three_four"
                android:orientation="horizontal">
                <RelativeLayout android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/methane"
                    android:layout_weight="1" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="20sp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/methane_pmm"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/methane_reading"
                        android:layout_centerInParent="true"
                        android:textColor="@color/black"
                        android:text="9999"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeMaxTextSize="100sp"
                        android:textAlignment="center"
                        android:paddingEnd="10sp"
                        android:paddingStart="10sp"
                        app:autoSizeStepGranularity="2sp"
                        android:layout_height="100sp"/>
                </RelativeLayout>

                <RelativeLayout android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/dust"
                    android:background="@drawable/green_rect"
                    android:layout_weight="1" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="20sp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/dust_pmm"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/dust_reading"
                        android:layout_centerInParent="true"
                        android:textColor="@color/black"
                        android:text="9999"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeMaxTextSize="100sp"
                        android:textAlignment="center"
                        android:paddingEnd="10sp"
                        android:paddingStart="10sp"
                        app:autoSizeStepGranularity="2sp"
                        android:layout_height="100sp"/>
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_below="@id/five_six"
                android:layout_marginTop="10sp"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:background="@drawable/primary_rect"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/update_date"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:text="Last Update: 12/22/2020"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </RelativeLayout>
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/activity_main_drawer" />

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>